# prado_650

./: .gitignore  DEMO_GUIDE.md  FILES_CREATED.md  INSTALLATION_GUIDE.md  README.md  SYSTEM_SUMMARY.md  debug_feature_alignment.py  pyproject.toml  pytest.ini  setup.py
examples/: full_pipeline_demo.py  phase0_demo.py  phase1_demo.py  phase2_demo.py  phase3_demo.py  phase4_demo.py  phase5_demo.py  phase6_demo.py
src/afml_system/: __init__.py  pipeline.py
src/afml_system/allocation/: __init__.py  hybrid_allocator.py
src/afml_system/config/: __init__.py  manager.py
src/afml_system/data/: __init__.py  bars.py  cusum.py  fetch.py  microstructure.py  schema.py
src/afml_system/evaluation/: __init__.py  backtest.py  metrics.py
src/afml_system/execution/: __init__.py  engine.py  risk.py
src/afml_system/features/: __init__.py  feature_union.py  microstructure.py  stationarity.py  technical.py  volatility.py
src/afml_system/labeling/: __init__.py  meta_labels.py  triple_barrier.py  weights.py
src/afml_system/models/: __init__.py  meta_selector.py  model_selection.py  persistence.py  purged_kfold.py  trainer.py
src/afml_system/regime/: __init__.py  detection.py  helpers.py  timeline.py
src/afml_system/state/: __init__.py  manager.py
src/afml_system/strategies/: __init__.py  (+9 more)
src/prado_cli/: cli.py
tests/compliance/: README.md  __init__.py  conftest.py  test_allocator_usage.py  test_bandit_usage.py  test_cusum_usage.py  test_ensemble_usage.py  test_meta_labeling.py  test_predict_ensemble_full.py  test_regimes.py  test_strategy_models.py  test_triple_barrier.py
