[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prado9"
version = "0.1.0"
description = "PRADO9 - Institutional-grade quantitative trading engine based on AFML methodology"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.28",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
]

[project.scripts]
prado = "prado_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
